@@ -2,6 +2,7 @@
 - allow setting the port used to connect to the submit host
 - allow using submit -r REV, without package name
 - set _tmppath rpm macro based on tempdir from repsys.conf
+- allow using target macros in getsrpm as in submit (via the -d option)
 
 * 1.9
 - really fixed -M
